p14536 Delete support of plugin.xml files